Prevents horizontal scroll to show

--- a/scss/03-elements/html/_html.scss
+++ b/scss/03-elements/html/_html.scss
@@ -20,4 +20,9 @@ html {
   // Changes the default tap highlight to be completely transparent in iOS.
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   min-height: 100%;
+
+  // Prevents horizontal scroll to show
+  // https://stackoverflow.com/questions/19308257/positionabsolute-causes-horizontal-scrollbar
+  overflow-x: hidden;
+  width: 100vw;
 }
